--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@import 'abstracts/colors.scss';
-// // @import 'abstracts/mixins.scss';
+// @import 'abstracts/colors.scss';
+// // // @import 'abstracts/mixins.scss';
 
-@import 'base/base.scss';
+// @import 'base/base.scss';
